# NewDesk

./: .gitignore  README.md  install.cmd
RemoteDesk/: CMakeLists.txt
proto/: remote.proto
src/: client.cpp  client.h  main.cpp  server.cpp  server.h
